<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="1dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/rv_row"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="1dp"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_item_photo"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:scaleType="centerCrop"
                android:layout_centerHorizontal="true"
                tools:src="@drawable/sate_maranggi_tasik"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_item_photo"
                android:layout_margin="4dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="8sp"
                android:autoSizeMaxTextSize="15sp"
                tools:text="@string/kuliners_name"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/tv_harga"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:visibility="invisible"
                tools:text="@string/price" />

            <TextView
                android:id="@+id/tv_item_detail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:visibility="invisible"
                tools:text="@string/detail" />

            <TextView
                android:id="@+id/tv_kategori"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:visibility="invisible"
                tools:text="@string/kategori" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
